build 31
updated regex for [spankbang]
updated regex for [xhamster]
ensured that the highest quality media size is displayed
restructed code to allow sites without a designed extractor to work (later)